--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
   "homepage": "https://github.com/liplum/ioc.js#readme",
   "devDependencies": {
     "typescript": "^5.4.5"
-  }
+  },
+  "packageManager": "pnpm@9.9.0"
 }
