--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "tsc && ava"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/liplum/ioc.js#readme",
   "devDependencies": {
+    "ava": "^6.1.3",
     "typescript": "^5.4.5"
   },
   "packageManager": "pnpm@9.9.0"
